--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./script.js">
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+/>
+
+<script
+  type="module"
+  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+></script>
+<script
+  nomodule
+  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+></script>
+<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <title>Nexus Studium</title>
 </head>
 
@@ -25,11 +40,102 @@
                 <li>
                     <div class="buttonHeader">
                         <button type="button">login</button>
-                    <button type="button">cadastre-se</button></li>
-                    </div>
+                        <button type="button">cadastre-se</button>
+                </li>
+                </div>
             </ul>
         </nav>
     </header>
+
+    <section id="tranding">
+        <div class="container-slide">
+            <h3 class="text-center section-subheading">- popular Delivery -</h3>
+            <h1 class="text-center section-heading">Tranding food</h1>
+        </div>
+        <div class="container-slide">
+            <div class="swiper tranding-slider">
+                <div class="swiper-wrapper">
+                    <!-- Slide-start -->
+                    <div class="swiper-slide box-slide">
+                        <div class="box-slide">
+                            <div class="box-slide"></div>
+                        </div>
+                        <div class="tranding-slide-content">
+                            <div class="tranding-slide-content-bottom">
+                                <h2 class="food-name">
+                                    Special Pizza
+                                </h2>
+                                <h3 class="food-rating">
+                                    <span>4.5</span>
+                                    <div class="rating">
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                    </div>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide box-slide">
+                        <div class="box-slide">
+                            <div class="box-slide"></div>
+                        </div>
+                        <div class="tranding-slide-content">
+                            <div class="tranding-slide-content-bottom">
+                                <h2 class="food-name">
+                                    Meat Ball
+                                </h2>
+                                <h3 class="food-rating">
+                                    <span>4.5</span>
+                                    <div class="rating">
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                    </div>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide box-slide">
+                        <div class="box-slide">
+                            <div class="box-slide">
+                        </div>
+                        <div class="tranding-slide-content">
+                            <div class="tranding-slide-content-bottom">
+                                <h2 class="food-name">
+                                    Meat Ball
+                                </h2>
+                                <h3 class="food-rating">
+                                    <span>4.5</span>
+                                    <div class="rating">
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                        <ion-icon name="star"></ion-icon>
+                                    </div>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tranding-slider-control">
+                        <div class="swiper-button-prev slider-arrow">
+                            <ion-icon name="arrow-back-outline"></ion-icon>
+                        </div>
+                        <div class="swiper-button-next slider-arrow">
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+                    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+                    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+                    <script src="script.js"></script>
+    </section>
 </body>
 
 </html>
