Iniciando o Player de Video

--- a/index.html
+++ b/index.html
@@ -35,22 +35,47 @@
     </header>
 
     <main>
-        <div class="carrossel">
-            <div class="carrossel-container">
-                <div class="carrossel-item main-topic">
-                    <h2>Trilha de Estudos</h2>
+        <div class="container video-painel">
+
+            <div class="playlist-painel">
+                <div class="head-playlist">
+                    <h3>Playlist</h3>
                 </div>
-                <div class="carrossel-item another-topic1">
-                    <h2>Em Alta</h2>
+
+                <div class="container playlist-video">
+                    <h3 class="button-playlist">Vídeo 01</h3>
+                    <h3 class="button-playlist">Vídeo 02</h3>
+                    <h3 class="button-playlist">Vídeo 03</h3>
+                    <h3 class="button-playlist">Vídeo 04</h3>
+                    <h3 class="button-playlist">Vídeo 05</h3>
+                    <h3 class="button-playlist">Vídeo 06</h3>
+                    <h3 class="button-playlist">Vídeo 07</h3>
+                    <h3 class="button-playlist">Vídeo 08</h3>
+                    <h3 class="button-playlist">Vídeo 09</h3>
+                    <h3 class="button-playlist">Vídeo 10</h3>
                 </div>
-                <div class="carrossel-item another-topic2">
-                    <h2>Artigos de Estudo</h2>
-                </div>
+
             </div>
-            <div class="carrossel-control"></div>
-            <script src="./script.js"></script>
+
+            <div class="video-player">
+                <iframe src="https://player.vimeo.com/video/581661854?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="670" height="377" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Lofi Letters"></iframe>
+            </div>
+
+            <div class="container comment-painel">
+                <div class="head-comment">
+                    <h3>Comentários</h3>
+                </div>
+
+                <div class="user-comment">
+
+                </div>
+
+                <div class="input-comment">
+                    
+                </div>
+
+            </div>
+
+
         </div>
     </main>
-</body>
-
-</html>
