Finalizando paginas do usuario

--- a/favorite-roads/index.html
+++ b/favorite-roads/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Histórico</title>
+    <title>Trilhas Favoritas</title>
 </head>
 
 <body>
@@ -56,26 +56,39 @@
             <div class="flex card roads">Trilhas favoritas</div>
         </div>
         <hr>
-        <div class="flex video-cards">
-            <div class="bg-card">
-                <div class="flex video"><img src="https://images.unsplash.com/photo-1640955014216-75201056c829?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Thumb do Vídeo"></div>
-                <div class="flex title-video">Usando o Adobe Premiere Pro</div>
-                <div class="flex hour-view">Visto hoje, 15h32</div>
+        <div class="flex road-group">
+            <div class="flex roads-row">
+                <div class="flex road-follow">
+                    Edição de Vídeo Profissional para Mídias Sociais
+                </div>
+                <div class="flex road-follow">
+                    Edição de Vídeo Profissional para Mídias Sociais
+                </div>
+                <div class="flex road-follow">
+                    Edição de Vídeo Profissional para Mídias Sociais
+                </div>
             </div>
-            <div class="bg-card">
-                <div class="flex video"><img src="https://images.unsplash.com/photo-1640955014216-75201056c829?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Thumb do Vídeo"></div>
-                <div class="flex title-video">Usando o Adobe Premiere Pro</div>
-                <div class="flex hour-view">Visto hoje, 15h32</div>
+            <div class="flex roads-row">
+                <div class="flex road-follow">
+                    Edição de Vídeo Profissional para Mídias Sociais
+                </div>
+                <div class="flex road-follow">
+                    Edição de Vídeo Profissional para Mídias Sociais
+                </div>
+                <div class="flex road-follow">
+                    Edição de Vídeo Profissional para Mídias Sociais
+                </div>
             </div>
-            <div class="bg-card">
-                <div class="flex video"><img src="https://images.unsplash.com/photo-1640955014216-75201056c829?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Thumb do Vídeo"></div>
-                <div class="flex title-video">Usando o Adobe Premiere Pro</div>
-                <div class="flex hour-view">Visto hoje, 15h32</div>
-            </div>
-            <div class="bg-card">
-                <div class="flex video"><img src="https://images.unsplash.com/photo-1640955014216-75201056c829?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Thumb do Vídeo"></div>
-                <div class="flex title-video">Usando o Adobe Premiere Pro</div>
-                <div class="flex hour-view">Visto hoje, 15h32</div>
+            <div class="flex roads-row">
+                <div class="flex road-follow">
+                    Edição de Vídeo Profissional para Mídias Sociais
+                </div>
+                <div class="flex road-follow">
+                    Edição de Vídeo Profissional para Mídias Sociais
+                </div>
+                <div class="flex road-follow">
+                    Edição de Vídeo Profissional para Mídias Sociais
+                </div>
             </div>
         </div>
     </main>
