--- a/historic/index.html
+++ b/historic/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="user-name flex">Seu Nome</div>
             <div class="user-settings">
-                <div class="user-setting flex">Config. da Conta</div>
+                <button class="user-setting flex"><a href="../user-information/index.html">Config. da Conta</a></button>
                 <div class="user-video flex">Seus Vídeos</div>
             </div>
         </section>
@@ -51,9 +51,9 @@
             </div>
         </aside>
         <div class="flex nav-page">
-            <div class="flex card historic">Histórico</div>
-            <div class="flex card follow">Quem eu sigo</div>
-            <div class="flex card roads">Trilhas favoritas</div>
+            <button class="flex card historic"><a href="../historic/index.html">Histórico</a></button>
+            <button class="flex card follow"><a href="../who-follow/index.html">Quem eu sigo</a></button>
+            <button class="flex card roads"><a href="../favorite-roads/index.html">Trilhas favoritas</a></button>
         </div>
         <hr>
         <div class="flex video-cards">
