--- a/favorite-roads/index.html
+++ b/favorite-roads/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styleTeste.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -37,7 +38,7 @@
             </div>
             <div class="user-name flex">Seu Nome</div>
             <div class="user-settings">
-                <div class="user-setting flex">Config. da Conta</div>
+                <button class="user-setting flex"><a href="../user-information/index.html">Config. da Conta</a></button>
                 <div class="user-video flex">Seus Vídeos</div>
             </div>
         </section>
@@ -51,9 +52,9 @@
             </div>
         </aside>
         <div class="flex nav-page">
-            <div class="flex card historic">Histórico</div>
-            <div class="flex card follow">Quem eu sigo</div>
-            <div class="flex card roads">Trilhas favoritas</div>
+            <button class="flex card historic"><a href="../historic/index.html">Histórico</a></button>
+            <button class="flex card follow"><a href="../who-follow/index.html">Quem eu sigo</a></button>
+            <button class="flex card roads"><a href="../favorite-roads/index.html">Trilhas favoritas</a></button>
         </div>
         <hr>
         <div class="flex road-group">
