--- a/login-page/index.html
+++ b/login-page/index.html
@@ -8,64 +8,56 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./carrousel/style.css">
     <title>Nexus Studium</title>
 </head>
 
 <body>
     <header>
-        <nav class="header flex">
-            <ul class="grid-header">
-                <li class="menu-btn">
-                    <img class="menu-icon" src="../img/logomarca-png.png" alt="Logomarca do Nexus Studium">
-                </li>
+        <nav>
+            <ul class="nav flex">
+                <li class="nav-btn flex"><img src="../img/logomarca-png.png" alt="Logomarca NexusStudium" width="100px"></li>
                 <li class="search-bar">
                     <div>
                         <form class="bg-search">
-                            <button class="search-button" type="submit"><i class="search-icon"><img
+                            <button title="btn" class="search-button" type="submit"><i class="search-icon"><img
                                         src="../img/searchIcon.svg" alt=""></i></button>
                             <input class="search-input" type="text" placeholder="O que você quer aprender?">
                         </form>
-                    </div>
-                </li>
-                <li class="button-header">
-                        <button type="button" class="logged">A</button>
-                </li>
+                    </div></li>
+                    <li class="user-button">
+                        <a href="../user/historic/index.html"><div class="flex user-page">
+                            <i class="fa-solid fa-user fa-2x"></i>
+                        </div></a>
+                    </li>
             </ul>
         </nav>
     </header>
+    
     <main class="grid-container">
         <div class="carrossel flex">
-            <span class="slider" id="slider4"></span>
-            <span class="slider" id="slider5"></span>
-            <span class="slider" id="slider6"></span>
-
             <div class="div-container">
-                <div class="slide-div flex" id="slide-4">
+                <div class="slide-div flex" id="slide-1">
                     <div class="bg flex" id="bg4">
                         <h2 class="carrossel-title">Trilha de Estudos</h2>
                         <p class="carrossel-subtitle">Se desenvolva através de um caminho pré-definido por profissionais
                             experientes</p>
                     </div>
-                    <a href="#slider4" class="button" id="btn"></a>
                 </div>
 
-                <div class="slide-div flex" id="slide-5">
+                <div class="slide-div flex" id="slide-2">
                     <div class="bg flex" id="bg5">
                         <h2 class="carrossel-title">Trilha de Estudos</h2>
                         <p class="carrossel-subtitle">Se desenvolva através de um caminho pré-definido por profissionais
                             experientes</p>
                     </div>
-                    <a href="#slider5" class="button" id="btn"></a>
                 </div>
 
-                <div class="slide-div flex" id="slide-6">
+                <div class="slide-div flex" id="slide-3">
                     <div class="bg flex" id="bg6">
                         <h2 class="carrossel-title">Trilha de Estudos</h2>
                         <p class="carrossel-subtitle">Se desenvolva através de um caminho pré-definido por profissionais
                             experientes</p>
                     </div>
-                    <a href="#slider6" class="button" id="btn"></a>
                 </div>
             </div>
         </div>
@@ -111,33 +103,7 @@
             <p>Copyright &copy; Todos os direitos reservados</p>
         </div>
 
-        <script>
-            // Pega o modal
-            var modal = document.getElementById("myModal");
-
-            // Pega o botão que abre o modal
-            var btn = document.getElementById("openModalBtn");
-
-            // Pega o elemento <span> que fecha o modal
-            var span = document.getElementsByClassName("close")[0];
-
-            // Quando o usuário clicar no botão, abre o modal 
-            btn.onclick = function () {
-                modal.style.display = "block";
-            }
-
-            // Quando o usuário clicar no <span> (x), fecha o modal
-            span.onclick = function () {
-                modal.style.display = "none";
-            }
-
-            // Quando o usuário clicar fora do modal, fecha o modal
-            window.onclick = function (event) {
-                if (event.target == modal) {
-                    modal.style.display = "none";
-                }
-            }
-        </script>
+        <script src="./modal.js"></script>
     </footer>
 </body>
 
